# ######################################################################### $
# Makefile for styletableprint.                                       		$
# $Id::                                                                     $
# ######################################################################### $

SRC_SUBDIRS = src
SUBDIRS = $(SRC_SUBDIRS) docs

ACLOCAL_AMFLAGS = -I m4
AM_DISTCHECK_CONFIGURE_FLAGS = --enable-introspection
